[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["memory-management", "data-structures", "no-std", "wasm"]
description = "An intrusive splay tree implementation that is no-std compatible and free from allocation and moves."
edition = "2021"
license = "MPL-2.0"
name = "intrusive_splay_tree"
readme = "./README.md"
repository = "https://github.com/fitzgen/intrusive_splay_tree"
version = "0.2.0"

[badges]
travis-ci = { repository = "fitzgen/intrusive_splay_tree" }

[dependencies]
memoffset = "0.5.5"

[dev-dependencies]
bumpalo = "3.4.0"
quickcheck = "0.6.0"
