[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["memory-management", "data-structures", "no-std", "wasm"]
description = "An intrusive splay tree implementation that is no-std compatible and free from allocation and moves."
edition = "2021"
license = "MPL-2.0"
name = "intrusive_splay_tree"
readme = "./README.md"
repository = "https://github.com/fitzgen/intrusive_splay_tree"
version = "0.2.1"

[dev-dependencies]
bumpalo = "3.16.0"
quickcheck = "0.6.2"
